Fix unneeded scrollbar

--- a/examples/hello-world/srcts/styles.css
+++ b/examples/hello-world/srcts/styles.css
@@ -10,7 +10,6 @@ body {
 }
 
 #root {
-  padding: 16px;
   min-height: calc(100dvh - 32px);
   display: flex;
   align-items: center;
